# here-there-be-dragons

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  justfile
.github/: dependabot.yml
.sqlx/: query-020ba242c08033c234015c3108be9ac8aa1019e7ac131fafa726e6178553c307.json  query-06867131a348a6ae0899b1d1c13affd2286bf1c320e30a3593e24a565a1d7f42.json  query-0c4b937a98c15243c51d7d256a7a43438d831cb750d264ff007991d831316070.json  query-13de65985b321fac11b09298fd39f27a083542950ada7391289c7f7f71ed4025.json  query-1402d097e590014b0d80a0ac241b86869c5ec408520f3472db4502feb2f1f9cc.json  query-14bfa9304dbcf845b834529a9d03428a7823692f07b5a17622ac51a96e50b74c.json  query-19b921dd08771023f38d5024662988f275d8e17c4e6c28322c7f76f35238417a.json  query-1b020fb0f963a9e29545d0f6b5bd83b2c9a5265b45742e00cae49a4600bdf8bf.json  query-1fa3c20197915697485a7fa0c0ea4e9b77e11828dce99367aee127393e92f921.json  query-253f5281ddc4859f30dae09600a077cafc1e6cd01d5408e3da9c37cd686263ab.json  query-256c3f42bfd8f862b5a571399fe5815916416e2c1bcda7cf8dafb6c2575543ed.json  query-25816dc151aad3f3048de73ebd3c5e89dab2ac2de246ad95038e79cffd37993c.json  query-2b3b9ddd7164bbf63abb111a0d9ab86a4ad4c0f020d32e68875638b66484d2cf.json  (+92 more)
client/: package.json  (+3 more)
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/server/src/game_system/: mod.rs  stub.rs
crates/server/src/middleware/: auth.rs
crates/server/src/routes/: assets.rs  auth.rs  campaigns.rs  characters.rs  chat.rs  drawings.rs  fog.rs  game_systems.rs  guards.rs  handouts.rs  layers.rs  map_images.rs  maps.rs  mod.rs  state.rs  tokens.rs  walls.rs  ws.rs
crates/server/src/session/: broadcaster.rs  manager.rs  mod.rs  types.rs
crates/server/tests/: asset_test.rs  auth_test.rs  campaign_test.rs  drawings.rs  layers.rs  map_images.rs  maps.rs  tokens.rs  websocket.rs  ws_test.rs
crates/server/tests/common/: mod.rs
(+273 files in other folders)
