[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
htbd-core = { path = "../htbd-core" }
db = { path = "../db" }
asset-store = { path = "../asset-store" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
thiserror.workspace = true

rust-argon2 = "3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
sha2 = "0.10"
hex = "0.4"
axum-extra = { version = "0.12", features = ["cookie"] }
time = "0.3"
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "cookies", "multipart"] }
tokio-tungstenite = "0.29"
tempfile = "3"
